tests/compile-fail/unit_struct_not_supported.rs
use clap::Parser;
use clap_layers::Layered;

#[derive(Parser, Layered)]
struct Config;

fn main() {}
